--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,19 @@
 {
-    "name": "zz-studio/think-addons",
+    "name": "liudu/think-addons",
     "description": "The ThinkPHP6 Addons Package",
     "license": "Apache-2.0",
     "authors": [
         {
-            "name": "byron",
-            "email": "xiaobo.sun@qq.com"
+            "name": "xiancai",
+            "email": "1130417821@qq.com"
         }
     ],
     "require": {
-        "php": ">=7.1.0",
-        "topthink/framework": "^6.0.0",
+        "php": ">=7.2.5",
+         "topthink/framework": "^6.0",
         "topthink/think-view": "^1.0",
-        "topthink/think-helper": "^3.0.0"
+        "topthink/think-helper": "^3.0.0",
+        "topthink/think-multi-app":"^1.0"
     },
     "autoload": {
         "psr-4": {
